# qt4hellogl

./: .gitignore  CMakeLists.txt  README.md  glwidget.cpp  glwidget.h
